# light

./: .gitignore  ChangeLog.md  DOCUMENTATION.md  Makefile  Makefile.am  README.md  configure.ac  light.1
archlinux/: PKGBUILD
debian/: .gitignore  changelog  control  copyright  light.postinst  rules  watch
src/: Makefile.am  helpers.c  helpers.h  light.c  light.h  main.c
src/impl/: razer.c  razer.h  sysfs.c  sysfs.h  util.c  util.h
